<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="coid.customer.pickupondemand.jet.fragment.PickupDetailConfirmationFragment">

    <LinearLayout
        android:id="@+id/ll_bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="@color/colorBackgroundSecondary">

        <RelativeLayout
            android:id="@+id/rl_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium"
            android:layout_marginTop="@dimen/small"
            android:layout_marginRight="@dimen/medium"
            android:layout_marginBottom="@dimen/small"
            android:layout_marginLeft="@dimen/medium"
            android:background="@drawable/custom_bg_rounded_square_red_fill">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_medium"
                android:text="@string/pod_continue"/>
        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_bottom_container"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/medium"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_medium"
                    android:text="@string/pod_pickup_detail_confirmation_title"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_quick_pickup_item_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/extra_small"
                    android:textColorHint="@color/colorTextSecondary"
                    android:theme="@style/JETTextInputLayout">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_quick_pickup_item_count"
                        android:layout_width="192dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/pod_pickup_detail_confirmation_quick_pickup_item_count"
                        android:maxLines="1"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/text_size_medium_large"
                        android:selectAllOnFocus="true"
                        android:theme="@style/CustomEditText"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_pic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small"
                    android:textColorHint="@color/colorTextSecondary"
                    android:theme="@style/JETTextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_pic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pod_pickup_detail_confirmation_pic"
                        android:maxLines="1"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/text_size_medium_large"
                        android:selectAllOnFocus="true"
                        android:theme="@style/CustomEditText"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/extra_small"
                    android:textColorHint="@color/colorTextSecondary"
                    android:theme="@style/JETTextInputLayout">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:hint="@string/pod_pickup_detail_confirmation_phone"
                        android:maxLines="1"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/text_size_medium_large"
                        android:selectAllOnFocus="true"
                        android:theme="@style/CustomEditText"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_sddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/extra_small"
                    android:focusable="false"
                    android:textColorHint="@color/colorTextSecondary"
                    android:theme="@style/JETTextInputLayout">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/pod_pickup_detail_confirmation_address"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/text_size_medium_large"
                        android:theme="@style/CustomEditText"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/extra_small"
                    android:textColorHint="@color/colorTextSecondary"
                    android:theme="@style/JETTextInputLayout">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_notes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pod_pickup_detail_confirmation_notes"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/text_size_medium_large"
                        android:selectAllOnFocus="true"
                        android:theme="@style/CustomEditText"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
