<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fl_step_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="coid.customer.pickupondemand.jet.fragment.PickupItemStep1Fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/medium"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_medium"
                    android:text="@string/pod_pickup_item_consignee_detail"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_consignee_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/extra_small"
                    android:textColorHint="@color/colorTextSecondary"
                    android:theme="@style/JETTextInputLayout">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_consignee_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pod_pickup_item_consignee_name"
                        android:maxLines="1"
                        android:drawableRight="@drawable/ic_asterisk_red"
                        android:drawableEnd="@drawable/ic_asterisk_red"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/text_size_medium_large"
                        android:selectAllOnFocus="true"
                        android:theme="@style/CustomEditText"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_consignee_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/extra_small"
                    android:textColorHint="@color/colorTextSecondary"
                    android:theme="@style/JETTextInputLayout">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_consignee_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:hint="@string/pod_pickup_item_consignee_phone_number"
                        android:maxLines="1"
                        android:drawableRight="@drawable/ic_asterisk_red"
                        android:drawableEnd="@drawable/ic_asterisk_red"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/text_size_medium_large"
                        android:selectAllOnFocus="true"
                        android:theme="@style/CustomEditText"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_consignee_address_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/extra_small"
                    android:textColorHint="@color/colorTextSecondary"
                    android:theme="@style/JETTextInputLayout">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_consignee_address_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pod_pickup_item_consignee_address_detail"
                        android:drawableRight="@drawable/ic_asterisk_red"
                        android:drawableEnd="@drawable/ic_asterisk_red"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/text_size_medium_large"
                        android:selectAllOnFocus="true"
                        android:theme="@style/CustomEditText"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorLinePrimary"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_show_optional_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium"
                    android:drawableBottom="@drawable/ic_spinner_down"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="@dimen/text_size_medium_large"
                    android:text="@string/pod_pickup_item_show_optional_content"/>
                <LinearLayout
                    android:id="@+id/ll_optional_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/medium"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_consignee_jet_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorTextSecondary"
                        android:theme="@style/JETTextInputLayout">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_consignee_jet_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/pod_pickup_item_consignee_jet_id"
                            android:maxLines="1"
                            android:textColor="@color/colorTextPrimary"
                            android:textSize="@dimen/text_size_medium_large"
                            android:selectAllOnFocus="true"
                            android:theme="@style/CustomEditText"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_consignee_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/extra_small"
                        android:textColorHint="@color/colorTextSecondary"
                        android:theme="@style/JETTextInputLayout">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_consignee_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:hint="@string/pod_pickup_item_consignee_address"
                            android:textColor="@color/colorTextPrimary"
                            android:textSize="@dimen/text_size_medium_large"
                            android:theme="@style/CustomEditText"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
